[package]
name = "typst-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "typst_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rfd = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[profile.release]
opt-level = "s"    # optimise for size (keeps the binary lean)
strip = true
